--- a/Exploratory Data Viz.qmd
+++ b/Exploratory Data Viz.qmd
@@ -44,3 +44,38 @@ head(penguins)
 #Can you show me the last six lines? 
 tail(penguins)
 ```
+
+Let's make some Data Viz!
+
+```{r}
+skim(penguins)
+
+#skim is great way to see overview of the data, including histogram of distribution
+```
+
+```{r}
+#| warning: false
+GGally::ggpairs(penguins)
+```
+
+##Jitterplot- show a lot of the data
+
+Flipper length by species
+
+```{r}
+#| echo: false
+ggplot(data = penguins, aes(x = species, y = flipper_length_mm)) + geom_jitter(width = 0.2, 
+                                                                               alpha = 0.5, height = 0,
+                                                                               aes(color = species)) + 
+  geom_boxplot(fill = NA) +
+  theme_light() + scale_color_manual(values = c("darkorchid4", "cyan4", "goldenrod")) + 
+  labs(x = "Penguin Species", y = "Flipper length (mm)", legend = "Species")
+```
+
+Exploratory Histogram
+
+```{r}
+ggplot(data = penguins, aes(x = bill_length_mm)) + 
+  geom_histogram(aes(fill = species), color = "magenta") +  facet_wrap(~species, ncol = 1)
+  
+```
